Fix: sanitize duplicated byday values